[package]
name = "rustylogic"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iterslide = "1.0.1"
itertools="0.10.1"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
log ="0.4.17"
simple_event_bus = "0.0.5"
console = "0.15.7"
